--- a/smartui/src/main/res/values/smui_style_widget.xml
+++ b/smartui/src/main/res/values/smui_style_widget.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <resources>
 
+
+
+
+
+
     <style name="SMUI.Dialog" parent="android:Theme.Dialog">
         <!--背景模糊的透明度-->
         <item name="android:backgroundDimAmount">?attr/smui_dialog_background_dim_amount</item>
@@ -10,4 +15,29 @@
         <!--在中间弹框、背后有遮罩的效果-->
         <item name="android:windowIsFloating">true</item>
     </style>
+
+
+
+
+    <style name="SMUI.RoundButton" parent="@style/Button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <!--<item name="android:padding">0dp</item>--><!-- 不用 android:padding，而用各个方向分别指定 padding，方便子类覆盖 -->
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingBottom">0dp</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">center</item>
+        <item name="android:ellipsize">end</item>
+        <item name="smui_isRadiusAdjustBounds">true</item>
+        <item name="smui_backgroundColor">@color/smui_s_transparent</item>
+        <item name="smui_borderWidth">?attr/smui_round_btn_border_width</item>
+        <item name="smui_borderColor">?attr/smui_round_btn_border_color</item>
+        <item name="android:textColor">?attr/smui_round_btn_text_color</item>
+    </style>
+
+
 </resources>
