--- a/smartui/src/main/res/values/smui_themes.xml
+++ b/smartui/src/main/res/values/smui_themes.xml
@@ -11,10 +11,20 @@
     <style name="AppConfigTheme" parent="AppBaseTheme" />
 
     <style name="SMUI" parent="AppConfigTheme">
-
         <item name="smui_dialog_background_dim_amount">0.6</item>
+        <item name="SMUIButtonStyle">@style/SMUI.RoundButton</item>
 
+        <item name="smui_round_btn_text_size">@dimen/smui_btn_text_size</item>
+        <item name="smui_round_btn_border_width">@dimen/smui_btn_border_width</item>
+        <item name="smui_round_btn_bg_color">@color/smui_btn_blue_bg</item>
+        <item name="smui_round_btn_border_color">@color/smui_btn_blue_border</item>
+        <item name="smui_round_btn_text_color">@color/smui_btn_blue_text</item>
     </style>
+
+
+    <style name="ButtonBase" parent="android:Widget.Holo.Light.Button" />
+
+    <style name="Button" parent="ButtonBase" />
 
 
 </resources>
