--- a/smart-ui/src/main/res/values/smui_themes_compat.xml
+++ b/smart-ui/src/main/res/values/smui_themes_compat.xml
@@ -13,7 +13,26 @@
     <style name="SMUI.Compat" parent="AppConfigTheme.Compat">
         <item name="smui_dialog_background_dim_amount">0.6</item>
         <item name="SMUIButtonStyle">@style/SMUI.RoundButton</item>
+
+
+        <item name="smui_round_btn_text_size">@dimen/smui_btn_text_size</item>
+        <item name="smui_round_btn_border_width">@dimen/smui_btn_border_width</item>
+        <item name="smui_round_btn_bg_color">@color/smui_btn_primary_bg</item>
+        <item name="smui_round_btn_border_color">@color/smui_btn_primary_bg</item>
+        <item name="smui_round_btn_text_color">@color/smui_btn_primary_bg</item>
     </style>
+
+
+    <!-- 注意，与SMUI.NoActionBar不同，这里windowActionBar与windowNoTitle没有前缀android -->
+    <style name="SMUI.Compat.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+
+
+    <!-- ～～～～～～～～～～～～以上是app theme  以下是 wigget theme～～～～～～～～～～～～ -->
+
 
 
     <style name="ButtonBase.Compat" parent="@style/Widget.AppCompat.Button">
