--- a/smart-ui/src/main/res/values/smui_colors.xml
+++ b/smart-ui/src/main/res/values/smui_colors.xml
@@ -11,9 +11,29 @@
     <color name="smui_config_color_primary_pressed">#EA7A3D</color>
     <color name="smui_config_color_primary_disable">#EA7A3D</color>
 
+    <color name="smui_config_color_black">#333333</color>
+    <color name="smui_config_color_tip">#858C96</color>
+    <color name="smui_config_color_link">#547FB0</color>
+    <color name="smui_config_color_pressed">#EEEEF0</color>
+
 
     <color name="smui_config_color_transparent">#00000000</color>
     <color name="smui_config_color_separator">#DEE0E2</color>
+
+
+
+
+    <color name="qmui_config_color_gray_1">#353C46</color>
+    <color name="qmui_config_color_gray_2">#49505A</color>
+    <color name="qmui_config_color_gray_3">#5D646E</color>
+    <color name="qmui_config_color_gray_4">#717882</color>
+    <color name="qmui_config_color_gray_5">#858C96</color>
+    <color name="qmui_config_color_gray_6">#99A0AA</color>
+    <color name="qmui_config_color_gray_7">#ADB4BE</color>
+    <color name="qmui_config_color_gray_8">#C4C8D0</color>
+    <color name="qmui_config_color_gray_9">#D8DCE4</color>
+
+
 
 
 </resources>
