--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+
+    <color name="tt_DEE0E2">#DEE0E2</color>
+    <color name="tt_white">#ffffff</color>
+    <color name="tt_colorful">#FF8820</color>
+
+
 </resources>
