--- a/smart-ui/src/main/res/values/smui_dimens.xml
+++ b/smart-ui/src/main/res/values/smui_dimens.xml
@@ -2,10 +2,13 @@
 <resources>
 
 
+    <dimen name="smui_btn_text_large_size">18sp</dimen>
+    <dimen name="smui_btn_text_big_size">16sp</dimen>
+    <dimen name="smui_btn_text_middle_size">14sp</dimen>
+    <dimen name="smui_btn_text_small_size">12sp</dimen>
 
 
-
-    <dimen name="smui_btn_text_size">16sp</dimen>
+    <dimen name="smui_btn_text_size">14sp</dimen>
     <dimen name="smui_btn_border_width">1dp</dimen>
 
 </resources>
