--- a/smart-ui/src/main/res/values/smui_style_widget.xml
+++ b/smart-ui/src/main/res/values/smui_style_widget.xml
@@ -37,6 +37,9 @@
         <item name="smui_borderWidth">?attr/smui_round_btn_border_width</item>
         <item name="smui_borderColor">?attr/smui_round_btn_border_color</item>
         <item name="android:textColor">?attr/smui_round_btn_text_color</item>
+        <item name="android:textSize">?attr/smui_round_btn_text_size</item>
+
+
     </style>
 
 
