--- a/smart-ui/src/main/res/values/smui_themes.xml
+++ b/smart-ui/src/main/res/values/smui_themes.xml
@@ -6,13 +6,23 @@
 
     <style name="AppRootTheme" parent="android:Theme.Holo.Light" />
 
-    <style name="AppBaseTheme" parent="AppRootTheme"></style>
+    <style name="AppBaseTheme" parent="AppRootTheme">
+
+        <item name="android:buttonStyle">@style/Button</item>
+
+    </style>
 
     <style name="AppConfigTheme" parent="AppBaseTheme" />
 
     <style name="SMUI" parent="AppConfigTheme">
         <item name="smui_dialog_background_dim_amount">0.6</item>
         <item name="SMUIButtonStyle">@style/SMUI.RoundButton</item>
+
+
+        <!-- ～～～～～～～～～～～～～～～～各个?attr 值初始化～～～～～～～～～～～～～～～～ -->
+
+        <item name="smui_alpha_pressed">0.5</item>
+        <item name="smui_alpha_disabled">0.5</item>
 
         <item name="smui_round_btn_text_size">@dimen/smui_btn_text_size</item>
         <item name="smui_round_btn_border_width">@dimen/smui_btn_border_width</item>
