--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
     android:gravity="center"
     android:orientation="vertical">
@@ -40,9 +41,14 @@
 
 
     <com.smart.ui.widget.round.SMUIRoundButton
+        android:layout_marginTop="50dp"
         android:id="@+id/btn"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        app:smui_borderColor="@color/colorPrimary"
+        app:smui_borderWidth="1dp"
+        app:smui_backgroundColor="@color/tt_white"
+        android:textColor="@color/colorPrimary"
         android:text="测试"/>
 
 
