--- a/smart-ui/src/main/res/values/smui_attrs.xml
+++ b/smart-ui/src/main/res/values/smui_attrs.xml
@@ -77,7 +77,7 @@
     <attr name="SMUIButtonStyle" format="reference" />
 
     <!-- RoundButton -->
-    <declare-styleable name="SMUIRoundButton">
+    <declare-styleable name="SMUIButton">
         <attr name="smui_backgroundColor" />
         <attr name="smui_borderColor" />
         <attr name="smui_borderWidth" />
