--- a/smart-ui/src/main/res/values/smui_colors.xml
+++ b/smart-ui/src/main/res/values/smui_colors.xml
@@ -17,8 +17,14 @@
     <color name="smui_config_color_pressed">#EEEEF0</color>
 
 
+    <color name="smui_config_color_white">#ffffff</color>
+
+
+    <color name="smui_config_color_separator">#00000000</color>
+
+
     <color name="smui_config_color_transparent">#00000000</color>
-    <color name="smui_config_color_separator">#DEE0E2</color>
+    <color name="smui_config_color_transparent">#00000000</color>
 
 
     <color name="smui_config_color_gray_1">#353C46</color>
