--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity"
     android:gravity="center">
 
-    <com.smart.ui.layout.SMUIButton
+    <com.smart.ui.widget.SMUIButton
         android:id="@+id/roundBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
