--- a/smart-ui/src/main/res/values/smui_themes.xml
+++ b/smart-ui/src/main/res/values/smui_themes.xml
@@ -15,8 +15,12 @@
     <style name="AppConfigTheme" parent="AppBaseTheme" />
 
     <style name="SMUI" parent="AppConfigTheme">
+
+
         <item name="smui_dialog_background_dim_amount">0.6</item>
         <item name="SMUIButtonStyle">@style/SMUI.RoundButton</item>
+        <item name="SMUITopBarStyle">@style/SMUI.TopBar</item>
+        <item name="smui_topbar_height">56dp</item>
 
 
         <!-- ～～～～～～～～～～～～～～～～各个?attr 值初始化～～～～～～～～～～～～～～～～ -->
@@ -30,6 +34,18 @@
         <item name="smui_round_btn_bg_color">@color/smui_btn_primary_bg</item>
         <item name="smui_round_btn_border_color">@color/smui_btn_primary_bg</item>
         <item name="smui_round_btn_text_color">@color/smui_btn_primary_bg</item>
+
+        <item name="smui_config_color_separator">@color/smui_config_color_separator</item>
+
+        <item name="smui_config_color_gray_1">@color/smui_config_color_gray_1</item>
+        <item name="smui_config_color_gray_2">@color/smui_config_color_gray_2</item>
+        <item name="smui_config_color_gray_3">@color/smui_config_color_gray_3</item>
+        <item name="smui_config_color_gray_4">@color/smui_config_color_gray_4</item>
+        <item name="smui_config_color_gray_5">@color/smui_config_color_gray_5</item>
+        <item name="smui_config_color_gray_6">@color/smui_config_color_gray_6</item>
+        <item name="smui_config_color_gray_7">@color/smui_config_color_gray_7</item>
+        <item name="smui_config_color_gray_8">@color/smui_config_color_gray_8</item>
+        <item name="smui_config_color_gray_9">@color/smui_config_color_gray_9</item>
     </style>
 
     <style name="SMUI.NoActionBar">
