--- a/smart-ui/src/main/res/values/smui_themes_compat.xml
+++ b/smart-ui/src/main/res/values/smui_themes_compat.xml
@@ -14,8 +14,14 @@
     <style name="AppConfigTheme.Compat" parent="AppBaseTheme.Compat"></style>
 
     <style name="SMUI.Compat" parent="AppConfigTheme.Compat">
+
+
         <item name="smui_dialog_background_dim_amount">0.6</item>
         <item name="SMUIButtonStyle">@style/SMUI.RoundButton</item>
+        <item name="SMUIImageViewStyle">@style/SMUI.RoundImageView</item>
+
+        <item name="SMUITopBarStyle">@style/SMUI.TopBar</item>
+        <item name="smui_topbar_height">56dp</item>
 
 
         <!-- ～～～～～～～～～～～～～～～～各个?attr 值初始化～～～～～～～～～～～～～～～～ -->
@@ -27,6 +33,19 @@
         <item name="smui_round_btn_bg_color">@color/smui_btn_primary_bg</item>
         <item name="smui_round_btn_border_color">@color/smui_btn_primary_bg</item>
         <item name="smui_round_btn_text_color">@color/smui_btn_primary_bg</item>
+
+        <item name="smui_config_color_separator">@color/smui_config_color_separator</item>
+
+        <item name="smui_config_color_gray_1">@color/smui_config_color_gray_1</item>
+        <item name="smui_config_color_gray_2">@color/smui_config_color_gray_2</item>
+        <item name="smui_config_color_gray_3">@color/smui_config_color_gray_3</item>
+        <item name="smui_config_color_gray_4">@color/smui_config_color_gray_4</item>
+        <item name="smui_config_color_gray_5">@color/smui_config_color_gray_5</item>
+        <item name="smui_config_color_gray_6">@color/smui_config_color_gray_6</item>
+        <item name="smui_config_color_gray_7">@color/smui_config_color_gray_7</item>
+        <item name="smui_config_color_gray_8">@color/smui_config_color_gray_8</item>
+        <item name="smui_config_color_gray_9">@color/smui_config_color_gray_9</item>
+
     </style>
 
 
