--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
+    android:orientation="vertical"
     android:gravity="center">
 
     <com.smart.ui.widget.SMUIButton
@@ -20,6 +21,22 @@
         app:smui_backgroundColor="#ffffff"
         app:smui_borderColor="@color/colorPrimary"
         app:smui_borderWidth="0px" />
+
+
+    <com.smart.ui.widget.image.SMUIImageView
+        android:layout_width="240dp"
+        android:layout_height="300dp"
+        android:layout_centerInParent="true"
+        android:background="#fff"
+        android:padding="10dp"
+        app:smui_isCircle="false"
+        app:smui_isClipBg="true"
+        app:smui_radius="30dp"
+        app:smui_radiusBottomRight="0dp"
+        app:smui_borderColor="#66000000"
+        app:smui_borderWidth="4dp"
+        android:scaleType="fitXY"
+        android:src="@mipmap/test" />
 
 
 </LinearLayout>
