--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/tt_white"
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/text"
@@ -17,26 +18,28 @@
 
     <TextView
         android:id="@+id/test"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/test"
         android:gravity="center"
         android:text="test"
-        android:background="@drawable/test"
         android:visibility="gone" />
 
-    <RelativeLayout
+    <ImageView
         android:id="@+id/testRl"
-        android:layout_width="match_parent"
-        android:layout_marginTop="50dp"
+        android:layout_width="50dp"
         android:layout_height="50dp"
-        android:gravity="center"
-        android:background="@drawable/test" />
+        android:layout_marginTop="50dp"
+        android:clickable="true"
+        android:src="@mipmap/ic_back1"
+        android:background="@drawable/test1"
+        android:gravity="center" />
 
     <RelativeLayout
         android:id="@+id/testRl1"
         android:layout_width="match_parent"
-        android:layout_marginTop="50dp"
         android:layout_height="50dp"
+        android:layout_marginTop="50dp"
         android:gravity="center" />
 
 
@@ -47,17 +50,17 @@
 
 
     <com.smart.ui.widget.SMUIButton
-        android:layout_marginTop="50dp"
         android:id="@+id/btn"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginTop="50dp"
+        android:text="测试"
+        android:textColor="@color/colorPrimary"
+        app:smui_backgroundColor="@color/tt_white"
         app:smui_borderColor="@color/colorPrimary"
         app:smui_borderWidth="1dp"
-        app:smui_backgroundColor="@color/tt_white"
-        app:smui_radius="0dp"
         app:smui_isRadiusAdjustBounds="true"
-        android:textColor="@color/colorPrimary"
-        android:text="测试"/>
+        app:smui_radius="0dp" />
 
 
 </LinearLayout>
