--- a/smart-ui/src/main/res/drawable-v21/smui_btn_circle_pressed.xml
+++ b/smart-ui/src/main/res/drawable-v21/smui_btn_circle_pressed.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?attr/smui_config_color_pressed"></ripple>
+    android:color="@color/smui_config_color_pressed"></ripple>
