--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="50dp"
         android:clickable="true"
         android:src="@mipmap/ic_back1"
-        android:background="@drawable/test1"
+        android:background="@drawable/smui_btn_circle_pressed"
         android:gravity="center" />
 
     <RelativeLayout
